# rust-sdk

./: .gitignore  Cargo.toml  Makefile  README.md  book.toml  publish.sh
.github/workflows/: crate-workflow.yml  pr-workflow.yml
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts
docs/: README.md  SUMMARY.md  project-structure.md
docs/backend/: authentication.md
docs/common/: README.md  error.md  lib.md  package-structure.md
docs/common/models/: README.md  aggregator.md  api-client.md  nested.md  query-builder.md  repository.md  structure.md  validation.md
docs/common/models/relations/: README.md  many-to-many.md  many-to-one.md  one-to-many.md
docs/icp/: README.md
docs/web/: package-structure.md
examples/auth/: Cargo.toml
examples/auth/src/: main.rs
examples/basic/: Cargo.toml
examples/basic-api/: Cargo.toml
examples/basic-api/src/: main.rs
examples/oauth/: Cargo.toml  Dioxus.toml
examples/oauth/src/: main.rs
figma-icon-exporter/: Cargo.toml  README.md
figma-icon-exporter/src/: figma.rs  main.rs  rsx.rs
fixtures/sql/: init.sql
