[workspace]
members = [
  "examples/basic-api",
  "examples/oauth",
  "examples/auth",
  "examples/basic",

  "packages/by-axum",
  "packages/rest-api",
  "packages/by-types",
  "packages/by-macros",
  "packages/dioxus-popup",
  "packages/google-wallet",
  "packages/dioxus-oauth",
  "packages/dioxus-translate-macro",
  "packages/dioxus-translate",
  "packages/dioxus-translate-types",
  "packages/by-components",
  "packages/dioxus-aws",
  "packages/easy-dynamodb",
]
resolver = "2"

[workspace.package]
authors = ["Biyard"]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
by-components = { path = "packages/by-components", version = "0.1.*" }
by-axum = { path = "packages/by-axum", version = "0.2.*" }
by-types = { path = "packages/by-types", version = "0.3.*" }
rest-api = { path = "packages/rest-api", version = "0.1.*" }
dioxus-popup = { path = "packages/dioxus-popup", version = "0.1.*" }
dioxus-aws = { path = "packages/dioxus-aws", version = "0.6.*" }
easy-dynamodb = { path = "packages/easy-dynamodb", version = "0.1.*" }
dioxus-translate = { path = "packages/dioxus-translate", version = "0.1.*" }
dioxus-translate-types = { path = "packages/dioxus-translate-types", version = "0.1.*" }
dioxus-translate-macro = { path = "packages/dioxus-translate-macro", version = "0.1.*" }

aide = { version = "0.14.0", features = ["axum", "axum-query", "axum-extra", "axum-extra-headers", "axum-extra-query", "axum-json", "swagger", "redoc", "scalar", "macros"] }
axum = "0.8.1"
schemars = { version = "0.8.10", features = ["uuid1"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.133"
reqwest = { version = "0.12.12", features = ["blocking", "json", "multipart"] }

dioxus = { version = "0.6.3", features = ["web", "fullstack"] }
dioxus-fullstack = { version = "0.6.3" }
dioxus-cli-config = { version = "0.6.3" }