[package]
name = "figma-icon-exporter"
version = "0.1.0"
authors = ["Biyard"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "json", "multipart"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
roxmltree = "0.20.0"
convert_case = "0.7.1"
quote = "1.0.38"
proc-macro2 = "1.0.93"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
